versie Pete en Pavel
tot 2.3 af

--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -277,3 +277,34 @@
   year = {2006},
   pages = {295-328}
 }
+
+@article{zaenen1985,
+  title={Case and grammatical functions: The Icelandic passive},
+  author={Zaenen, Annie and Maling, Joan and Thráinsson, Höskuldur},
+  journal={Natural Language \& Linguistic Theory},
+  volume={3},
+  number={4},
+  pages={441--483},
+  year={1985},
+  publisher={Springer}
+}
+
+@inproceedings{harley1995,
+  title={Abstracting away from abstract case},
+  author={Harley, Heidi},
+  booktitle={Proceedings-NELS},
+  volume={25},
+  pages={207--222},
+  year={1995},
+  organization={University of Massachusetts},
+  editors={Jill Beckman},
+  publisher={GLSA}
+}
+
+@phdthesis{caha2009,
+  address = {Tromsø},
+  title = {The Nanosyntax of Case},
+  school = {University of Tromsø},
+  author = {Caha, Pavel},
+  year = {2009}
+}
