--- a/reoccuring-pattern.tex
+++ b/reoccuring-pattern.tex
@@ -2,12 +2,11 @@
 
 \chapter{A reoccurring pattern}
 
-First I introduce the pattern that forms the focus of the first part of the dissertation. I show that headless relatives in Gothic adhere to the case strength scale: \ac{nom} < \ac{acc} < \ac{dat}.
+First I introduce the pattern that forms the focus of the first part of the dissertation. I show that headless relatives in Gothic adhere to the case scale: \ac{nom} < \ac{acc} < \ac{dat}.
 
 Then I show two phenomena that follow the same ordering of \ac{nom}, \ac{acc} and \ac{dat}. The two phenomena are accessibility hierarchies. The first one is about agreement, the second one about relativization.
 
 In the last section of this chapter I discuss how \ac{nom}, \ac{acc} and \ac{dat} pattern in morphology.
-
 
 \section{Case competition in Gothic headless relatives}
 
@@ -23,21 +22,21 @@ The relative pronoun \tit{þan(a)} `who.\ac{acc}' appears in the accusative.
  pity\scsub{[acc]} who.\ac{acc} -\ac{comp} pity\scsub{[acc]}\\
  `I will pity (him) whom I pity' \flushfill{Gothic, \ac{rom} 9:15, after \pgcitealt{harbert1978}{339}}\label{ex:gothicaccaccrep}
 
- Consider the example in \ref{ex:gothicnomnom}, in which the internal case and the external case are nominative.
- The relative clause, including the relative pronoun, is marked in gray.
- The internal case is nominative. The predicate \tit{matjai} `eats' takes nominative subjects.
- The external case is nominative as well. Here the predicate \tit{gadauþnai} `die' takes nominative subjects.
- The relative pronoun \tit{sa} `who.\ac{nom}' appears in the nominative.
+Consider the example in \ref{ex:gothicnomnom}, in which the internal case and the external case are nominative.
+The relative clause, including the relative pronoun, is marked in gray.
+The internal case is nominative. The predicate \tit{matjai} `eats' takes nominative subjects.
+The external case is nominative as well. Here the predicate \tit{gadauþnai} `die' takes nominative subjects.
+The relative pronoun \tit{sa} `who.\ac{nom}' appears in the nominative.
 
 \exg. ei \tcol{DG}{sa} \tcol{DG}{-ei} \tcol{DG}{þis} \tcol{DG}{matjai}, ni gadauþnai\\
  that who.\ac{nom} -\ac{comp} {of this} eats\scsub{[nom]} not die\scsub{[nom]}\\
  `that (he) who eats of this may not die' \flushfill{Gothic, \ac{john} 6:50, after \pgcitealt{harbert1978}{337}}\label{ex:gothicnomnom}
 
- Consider the examples in \ref{ex:gothicdatdat}, in which the internal case and the external case are dative.
- The relative clauses, including the relative pronoun, is marked in gray.
- The internal case is dative. The predicates \tit{gabaur} `tribute', \tit{mota} `custom', \tit{agis} `fear' and \tit{sweriþa} `honour' takes dative objects.
- The external case is dative as well. The same predicates as in the relative clause take dative objects.
- The relative pronouns \tit{þamm(a)} `who.\ac{dat}' appear in the dative.
+Consider the examples in \ref{ex:gothicdatdat}, in which the internal case and the external case are dative.
+The relative clauses, including the relative pronoun, is marked in gray.
+The internal case is dative. The predicates \tit{gabaur} `tribute', \tit{mota} `custom', \tit{agis} `fear' and \tit{sweriþa} `honour' takes dative objects.
+The external case is dative as well. The same predicates as in the relative clause take dative objects.
+The relative pronouns \tit{þamm(a)} `who.\ac{dat}' appear in the dative.
 
 \ex.\label{ex:gothicdatdat}
 \ag. \tcol{DG}{þamm} \tcol{DG}{-ei} \tcol{DG}{gabaur} gabaur\\
@@ -55,9 +54,6 @@ The relative pronoun \tit{þan(a)} `who.\ac{acc}' appears in the accusative.
 
 A summary of data so far is given in Table \ref{tbl:summarygothicmatch}. The left column shows the internal case between square brackets. The upper row shows the external case between square brackets. The other cells indicate the case of the relative pronoun.
 So far only the diagonal line is filled. These are the matching examples, the examples in which the internal case matches the external case. The relative pronoun appears in the internal and external case, and it is marked in dark gray. The nominative is given in \ref{ex:gothicnomnom}, the accusative in \ref{ex:gothicaccaccrep}, and the dative in \ref{ex:gothicdatdat}.
-
-
-
 
 \begin{table}[H]
   \center
@@ -172,7 +168,6 @@ Throughout this dissertation * stands for 'not found in natural language'. For e
 The three instances in the lower left corner correspond to the examples \ref{ex:gothicaccnom}, \ref{ex:gothicdatnom} and \ref{ex:gothicdataccrep}. In the attested examples, the relative pronoun appears in the internal case.
 The three instances in the upper right corner correspond to the examples in \ref{ex:gothicnomacc}, \ref{ex:gothicnomdat} and \ref{ex:gothicaccdatrep}. In the attested examples, the relative pronoun appears in the external case.
 
-
 \begin{table}[H]
   \center
   \caption {Summary of Gothic matching headless relative data}
@@ -209,27 +204,27 @@ This can be reformulated as follows. In a competition, dative wins over accusati
 \b. \tsc{dat} wins over \tsc{nom}
 \b. \tsc{dat} wins over \tsc{acc}
 
-Formulated in a scale of `case strength' \citealt{harbert1978,pittner1995,vogel2001,grosu2003,caha2019}:
+This can be reduced to the following scale \citealt{harbert1978,pittner1995,vogel2001,grosu2003,caha2019}. Elements more on the right on this scale win over elements more on the left of this scale.
 
-\ex. \tsc{nom} < \tsc{acc} < \tsc{dat}\label{ex:casestrength}
+\ex. \tsc{nom} < \tsc{acc} < \tsc{dat}\label{ex:case-scale}
 
-In the next few sections I show that this scale of case strength does not only appear in headless relatives. The next section shows two other morphosyntactic phenomena that follow the same scale. Section \ref{sec:casemorphology} shows how the case scale is reflected in morphophonology.
+In the next few sections I show that this case scale does not only appear in headless relatives. The next section shows two other morphosyntactic phenomena that follow the same scale. Section \ref{sec:casemorphology} shows how the case scale is reflected in morphophonology.
 
 
-\section{Parallels in accessibility hierarchies}
+\section{Two impliciational hierarchies}
 
-In this section I discuss two additional phenomena in morphosyntax that reflect the \tsc{nom} < \tsc{acc} < \tsc{dat} ordering.
+In this section I discuss two additional phenomena in morphosyntax that reflect the \tsc{nom} < \tsc{acc} < \tsc{dat} scale. Both are implicational hierarchies. The first one is about agreement, the second one is about relativization.
 
 \subsection{Agreement}
 
 Agreement can be seen as ``a systematic covariance between a semantic or formal property of one element and a formal property of another'' \citep{steel1978}. Put differently, the shape of one element changes according to some properties of an element it relates to. In this section I discuss the agreement between a predicate and its arguments.
 
-It differs per language with how many of its arguments a predicate agrees. However, it is not random with which agreement takes place. Instead, there is a implicational hierarchy that is identical to the one observed for headless relatives in Gothic: \tsc{nom} --- \tsc{acc} --- \tsc{dat}.
+It differs per language with how many of its arguments a predicate agrees. However, it is not random with which agreement takes place. Instead, there is a implicational hierarchy that is identical to the one observed for headless relatives in Gothic: \tsc{nom} < \tsc{acc} < \tsc{dat}.
 
 \citet{moravcsik1978} formulated the implicational hierarchy in terms of grammatical functions subject, direct object and indirect object.\footnote{
 \citet{moravcsik1978} also included adverbs on the lowest end of the hierarchy. I leave them out here, because they are not relevant for the discussion.
 }
-The hierarchy is schematically represented in Figure \ref{fig:agr-sub-do-io}. It should be read as follows: if a languages allows the verb to agree with the argument in a particular circle, it also allows the verb to agree with the argument in the circle around it.
+The hierarchy is schematically represented in Figure \ref{fig:agr-sub-do-io}. It should be read as follows: if a language allows the predicate to agree with the argument in a particular circle, it also allows the predicate to agree with the argument in the circle around it.
 
 \begin{figure}[H]
   \centering
@@ -319,7 +314,8 @@ Putting the languages in \posscitet{moravcsik1978} figure gives the following re
      \label{tbl:agr-typo}
  \end{table}
 
-\citealt{bobaljik2006} argues that the implicational hierarchy is more accurate if it is stated in terms of case rather than grammatical function. He argues for the picture shown in \ref{fig:agr-def-dep-dat}.
+It is often the case that subjects appear in nominative case, and that direct objects appear in accusative. However, this is not always the case. Subjects can be non-nominative and direct objects can be non-accusative. \citealt{bobaljik2006} argues that the implicational hierarchy is more accurate if it is stated in terms of case rather than grammatical function. He argues for the picture shown in \ref{fig:agr-nom-acc-dat}.\footnote{
+Actually, \citealt{bobaljik2006} also includes ergative-absolutive languages, and argues for the picture in Figure \ref{fig:agr-def-dep-dat}. Default case can be nominative or absolutive case (in transitive clauses), and dependent case can be accusative and ergative case.
 
 \begin{figure}[H]
   \centering
@@ -332,25 +328,11 @@ Putting the languages in \posscitet{moravcsik1978} figure gives the following re
     \node[] at (0,1.5) {dependent case};
     \node[] at (0,0) {dative};
   \end{tikzpicture}
-  \caption{\posscitealt{bobaljik2006} schema}
+  \caption{\posscitealt{bobaljik2006} actual schema}
   \label{fig:agr-def-dep-dat}
 \end{figure}
 
-He gives examples of situations in which grammatical function and morphological case do not match. In these situations, case seem to be capture the facts for the implicational hierarchy. I give examples from Icelandic that illustrate this point.
-
-Icelandic has dative subjects. However, dative subjects never agree with the verb. This is illustrated in xx. The dative subject `many students' is plural, and and the verb has plural agreement as well. The sentence is ungrammatical.
-
-\exg. *Morgum studentum líka verkið.\\
- many students.\tsc{dat} like-PL job.\tsc{nom} \\
-`Many students like the job.' \flushfill{Harley 1995, 208}
-
-Instead, it is the nominative object that agrees with the verb. This is illustrated in xxx.
-
-\exg. Um veturinn voru konunginum gefnar ambáttir\\
-In the.winter were.PL the.king.\tsc{dat} given slaves.\tsc{nom}\\
-`In the winter, the king was given (female) slaves.' \flushfill{Zaenen et al, 112}
-
-In the languages I discuss in this dissertation, I focus on languages that have nominative as default case and accusative as dependent case. That is, \posscitealt{bobaljik2006} schema translates into Figure \ref{fig:agr-nom-acc-dat}.
+In the languages I discuss in this dissertation, I focus on languages that have nominative as default case and accusative as dependent case, so Figure \ref{fig:agr-nom-acc-dat} suffices.}
 
 \begin{figure}[H]
   \centering
@@ -364,16 +346,41 @@ In the languages I discuss in this dissertation, I focus on languages that have 
     \node[] at (0,0) {\tsc{dat}};
   \end{tikzpicture}
   \label{fig:agr-nom-acc-dat}
-  \caption{Schema for this dissertation}
+  \caption{\posscitealt{bobaljik2006} simplified schema}
 \end{figure}
 
-In conclusion, agreement follows the same implicational hierarchy as the strength hierarchy in headless relatives: \tsc{nom} --- \tsc{acc} --- \tsc{dat}.
+\citeauthor{bobaljik2006} gives examples of situations in which grammatical function and morphological case do not match. In these situations, case seem to be capture the facts for the implicational hierarchy, and grammatical function does not. I give two examples from Icelandic that illustrate this point.
+
+Icelandic is a language that has dative subjects. If agreement takes place with the grammatical subject, it is expected that the dative subject agrees with the predicate. This is not what happens, as illustrated in \ref{ex:icelandic-dat-sub}. The dative subject \tit{morgum studentum} `many students' is plural. The sentence is ungrammatical with the predicate \tit{líka} `like' inflecting for plural as well. So, the dative subject does not agree in number with the predicate. In other words, it is not the grammatical subject that shows agreement.
+
+\exg. *Morgum studentum líka verkið.\\
+ many students.\tsc{dat} like.\tsc{pl} job.\tsc{nom} \\
+`Many students like the job.' \flushfill{\pgcitealt{harley1995}{208}}\label{ex:icelandic-dat-sub}
+
+Instead, it is the nominative object that agrees with the verb. This is illustrated in \ref{ex:icelandic-nom-obj}. The dative subject \tit{konunginum} `the king' is singular. The nominative object \tit{ambáttir} `slaves' is plural. The predicate \tit{voru} `were' is inflected for plural, agreeing with the nominative object. This is expected if morphological case determines agreement: it is the nominative that shows agreement. The grammatical role, the fact that this nominative is an object, does not influence agreement.
+
+\exg. Um veturinn voru konunginum gefnar ambáttir\\
+In the.winter were.PL the.king.\tsc{dat} given slaves.\tsc{nom}\\
+`In the winter, the king was given (female) slaves.' \flushfill{\pgcitealt{zaenen1985}{112}}\label{ex:icelandic-nom-obj}
+
+In conclusion, agreement follows the same implicational hierarchy as the case scale in headless relatives: \tsc{nom} < \tsc{acc} < \tsc{dat}.
 
 
 \subsection{Relativization}
 
-Keenan Comrie sub/obj/ind obj
+Relativization refers to the process in which a relative clause is derived from a non-relative clause. An example of the non-relative clause is given in \ref{ex:rel-non}. The relative clause derived from that is shown in \ref{ex:rel-realati}. The head of the relative clause is \tit{the woman} and precedes the clause. The optional relative pronoun follows the head. The head of the head does not appear in the relative clause anymore.
 
+\ex.
+\a. You like the woman. \label{ex:rel-non}
+\b. the woman, (who) you like \label{ex:rel-realati}
+
+In \ref{ex:rel-realati}, it is the object of the clause that is relativized. It differ per language which elements can be relativized with a particular strategy. Again, it is not random with which elements can be relativized. Instead, there is a implicational hierarchy that is identical to the one observed for the case scale: \tsc{nom} < \tsc{acc} < \tsc{dat}.
+
+\citet{keenan1977} formulated the implicational hierarchy in terms of the grammatical functions subject, direct object and indirect object.\footnote{
+\citet{keenan1977} also included obliques, possessives and objects of comparison on the lowest end of the hierarchy. I leave them out here, because they are not relevant for the discussion.
+}
+
+The implicational hierarchy is schematically represented in Figure \ref{fig:relativization}. It should be read as follows: if a language allows relativization of a particular circle, it also allows relativization of the circle around it. The languages in the figure give examples of the circles they are in.
 
 \begin{figure}[H]
   \centering
@@ -394,7 +401,9 @@ Keenan Comrie sub/obj/ind obj
   \label{fig:relativization}
 \end{figure}
 
-Malagasy is an example of a language that allows subjects to be relativized, but not direct and indirect objects. \ref{ex:malagasy-decl} is an example of a declarative sentence in Malagasy. It is a transitive that contains the subject \tit{ny mpianatra} `the student' and the direct object \tit{ny vehivavy} `the woman'.
+There are four types of languages possible: first, a language that allows only the subject to be relativized with a particular strategy and not the direct and indirect object; second, a language that allows the subject and direct object to be relativized with a particular strategy but not the indirect object; and third, a language that allows the subject, the direct object and the indirect object to be relativized with a particular strategy.
+
+Malagasy is an example of a language that allows subjects to be relativized using a particular strategy, but not direct and indirect objects. \ref{ex:malagasy-decl} is an example of a declarative sentence in Malagasy. It is a transitive that contains the subject \tit{ny mpianatra} `the student' and the direct object \tit{ny vehivavy} `the woman'.
 
 \exg. Nahita ny vehivavy ny mpianatra.\\
  saw the woman the student\\
@@ -432,23 +441,25 @@ This is illustrated by the examples in \ref{ex:malay-no-io}. In \ref{ex:malay-no
 \bg. *perempuan yang Ali beri {ubi kentang} itu kapada\\
  woman that Ali give potato the to\\ \flushfill{Malay, \pgcitealt{keenan1977}{71}}\label{ex:malay-no-io2}
 
-Basque is an example of a language that has a relativization strategy for subjects, direct objects and indirect objects. \ref{ex:basque-decl} is an example of a declarative ditransitive sentence in Basque. The sentence contains the subject \tit{gizonak} `the man', the direct object \tit{liburua} `the book' and the indirect object \tit{emakumeari} `the woman'.
+Basque is an example of a language that has a particular relativization strategy for subjects, direct objects and indirect objects. \ref{ex:basque-decl} is an example of a declarative ditransitive sentence in Basque. The sentence contains the subject \tit{gizonak} `the man', the direct object \tit{liburua} `the book' and the indirect object \tit{emakumeari} `the woman'.
 
 \exg. Gizon-a-k emakume-a-ri liburu-a eman dio.\\
  man-\ac{def}-\ac{erg} woman-\ac{def}-\ac{dat} book-\ac{def}.\ac{abs} give has\\
  `The man has given the book to the woman.' \flushfill{Basque, \pgcitealt{keenan1977}{72}}\label{ex:basque-decl}
 
 A relative clause in Basque appears in the prenominal position and it is marked by the invariable marker \tit{-n}.\footnote{
-additionally, the relatized positions do not appear in verbal agreement anymore, but this not visible in the example, because they are all phonologicall zero(?).
+additionally, the relativized positions do not appear in verbal agreement anymore, but this not visible in the example, because they are all phonologically zero.
 }
-\ref{ex:malagasy-sub} shows examples or relativeiations.
-
-
-%%%%%
-
+\ref{ex:basque-sub} shows the four relativizations that are derived from \ref{ex:basque-decl}.
+In \ref{ex:basque-sub}, the ergative subject \tit{gizonak} `the man' from \ref{ex:basque-decl} is relativized. The head \tit{gizona} `the man' has lost its ergative marker \tsc{-k}, and follows the relative clause \tit{makumeari liburua eman dio} `who has given the book to the woman'. The suffix \tit{-n} is attached to the relative clause.
+In \ref{ex:basque-do}, the absolutive direct object \tit{liburua} `the book' from \ref{ex:basque-decl} is relativized. The head \tit{liburua} `the book' follows the relative clause \tit{gizonak emakumeari eman dion} `that the man has given to the woman'.\footnote{
+The absolutive direct object \tit{liburua} `the book' does not have an additional overt absolutive marker, so this difference cannot be observed when it is relativized.
+}
+The suffix \tit{-n} is attached to the relative clause.
+In \ref{ex:basque-io}, the dative indirect object \tit{emakumeari} `the woman' from \ref{ex:basque-decl} is relativized. The head \tit{emakumea} `the man' has lost its dative marker \tsc{-ri}, and follows the relative clause \tit{gizonak liburua eman dion} `that the man has given the book to'. The suffix \tit{-n} is attached to the relative clause.
 
 \ex.\label{ex:basque-rel}
-\bg. emakume-a-ri liburu-a eman dio-n gizon-a\\
+\ag. emakume-a-ri liburu-a eman dio-n gizon-a\\
  woman-\ac{def}-\ac{dat} book-\ac{def}.\ac{abs} give has-\ac{rel} man-\ac{def}\\
  `the man who has given the book to the woman'\label{ex:basque-sub}
 \bg. gizon-a-k emakume-a-ri eman dio-n liburu-a\\
@@ -458,44 +469,42 @@ additionally, the relatized positions do not appear in verbal agreement anymore,
  man-\ac{def}-\ac{erg} book-\ac{def}.\ac{abs} give has-\ac{rel} woman-\ac{def}\\
  `the woman that the man has given the book to' \flushfill{Basque, \pgcitealt{keenan1977}{72}}\label{ex:basque-io}
 
+\citealt{caha2009} restates the implicational hierarchy in terms of case. Again, the case scale can be observed: \tsc{nom} < \tsc{acc} < \tsc{dat}.
 
 
+ %
+ % \begin{table}[H]
+ %   \center
+ %   \caption {Relativization accessibility}
+ %     \begin{tabular}{cccc}
+ %       \toprule
+ %             \multicolumn{3}{c}{relativization of}
+ %           & \\
+ %       \cmidrule{1-3}
+ %             & direct
+ %             & indirect
+ %           & \\
+ %             subject
+ %             & object
+ %             & object
+ %           & example \\
+ %       \cmidrule{1-3} \cmidrule{4-4}
+ %             ✔
+ %             & *
+ %             & *
+ %           & Malagasy \\
+ %             ✔
+ %             & ✔
+ %             & *
+ %           & Malay \\
+ %             ✔
+ %             & ✔
+ %             & ✔
+ %           & Basque \\
+ %       \bottomrule
+ %     \end{tabular}
+ % \end{table}
 
- \begin{table}[H]
-   \center
-   \caption {Relativization accessibility}
-     \begin{tabular}{cccc}
-       \toprule
-             \multicolumn{3}{c}{relativization of}
-           & \\
-       \cmidrule{1-3}
-             & direct
-             & indirect
-           & \\
-             subject
-             & object
-             & object
-           & example \\
-       \cmidrule{1-3} \cmidrule{4-4}
-             ✔
-             & *
-             & *
-           & Malagasy \\
-             ✔
-             & ✔
-             & *
-           & Malay \\
-             ✔
-             & ✔
-             & ✔
-           & Basque \\
-       \bottomrule
-     \end{tabular}
- \end{table}
-
-
-
-Caha nom/acc/dat
 
 
 
@@ -508,9 +517,9 @@ Caha nom/acc/dat
 \subsection{Syncretism patterns}
 
 Icelandic: \pgcitealt{einarsson1949}{68}
-Teribe: ?
-Lavukaleve: Yvonne?
-Khinalugh: Beata etc.
+Teribe:
+Lavukaleve: %Yvonne?
+Khinalugh: %beata etc
 
 
 \begin{table}[H]
