--- a/fenna-files/abbreviations.sty
+++ b/fenna-files/abbreviations.sty
@@ -78,6 +78,19 @@
   class = abbr
 }
 
+\DeclareAcronym{subj}{
+  short = \tsc{subj} ,
+  long  = subject ,
+  class = abbr
+}
+
+\DeclareAcronym{obj}{
+  short = \tsc{obj} ,
+  long  = object ,
+  class = abbr
+}
+
+
 \DeclareAcronym{int}{
   short = \tsc{int} ,
   long  = internal case ,
