--- a/introduction.tex
+++ b/introduction.tex
@@ -95,7 +95,7 @@ The conclusion that follows is that the relative pronoun can take the external c
 The examples in \ref{ex:gothicaccdat} and \ref{ex:gothicdatacc} have shown that the relative pronoun in headless relatives can take either the internal or the external case. In the examples, the predicates (or preposition) take accusative and dative, and in both cases, the relative pronoun appeared in dative case. In other words, there was a competition between accusative and dative, and dative won.
 
 In the next section, I discuss the content of this dissertation. Before that, I comment on two notational conventions I use throughout this dissertation. First, I place subscripts on the glosses of the predicates. They indicate what the internal or external case is. The subscript on the predicate in the relative clause indicates the internal case. The subscript on the predicate in the main clause indicates the external case. This subscript can mean different things.
-For \tit{ushafjands} `picking up' \ref{ex:gothicaccacc} the subscript indicates which case the complement of the verb appears in. The subscript on \tit{taujau} `do' \ref{ex:gothicdatacc} in refers to the case of the indirect object of the predicate. Another possibility is that the subscript is placed on a preposition and refers to the case the preposition combines with, as for \tit{ana} `on' in \ref{ex:gothicaccdat}. A last possibility is that the subscript is [\tsc{nom}] and refers to the case in which the subject appears in, of which examples will emerge in the next chapter.
+For \tit{ushafjands} `picking up' \ref{ex:gothicaccacc} the subscript indicates which case the complement of the verb appears in. The subscript on \tit{taujau} `do' \ref{ex:gothicdatacc} in refers to the case of the indirect object of the predicate. Another possibility is that the subscript is placed on a preposition and refers to the case the preposition combines with, as for \tit{ana} `on' in \ref{ex:gothicaccdat}. A last possibility is that the subscript is [\ac{nom}] and refers to the case in which the subject appears in, of which examples will emerge in the next chapter.
 In other words, the subscript can refer several elements: a subject, object or indirect object of a predicate. There is no overarching theoretical notion that the subscript makes reference to. The subscript simply indicates which case is required within the (main or relative) clause.
 
 Second, I write the relative clause in gray. When the relative pronoun takes the internal case, I mark it in gray as well, as shown in \ref{ex:gothicaccdat}. When the relative pronoun takes the external case, I leave it black, indicating it patterns with the main clause. An example of that is \ref{ex:gothicdatacc}. When the internal and external case are the same, the relative pronoun should be black and gray. As this is impossible, I choose to mark it black, as shown in \ref{ex:gothicaccacc}.
