--- a/reoccuring-pattern.tex
+++ b/reoccuring-pattern.tex
@@ -200,26 +200,26 @@ The three instances in the upper right corner correspond to the examples in \ref
 This can be reformulated as follows. In a competition, dative wins over accusative and nominative. This can be seen in the lowest row and the most right column. Additionally, accusative wins over nominative. In sum, the situation can be summarized as in \ref{ex:competition1by1}.
 
 \ex.\label{ex:competition1by1}
-\a. \tsc{acc} wins over \tsc{nom}
-\b. \tsc{dat} wins over \tsc{nom}
-\b. \tsc{dat} wins over \tsc{acc}
+\a. \ac{acc} wins over \ac{nom}
+\b. \ac{dat} wins over \ac{nom}
+\b. \ac{dat} wins over \ac{acc}
 
 This can be reduced to the following scale \citealt{harbert1978,pittner1995,vogel2001,grosu2003,caha2019}. Elements more on the right on this scale win over elements more on the left of this scale.
 
-\ex. \tsc{nom} < \tsc{acc} < \tsc{dat}\label{ex:case-scale}
+\ex. \ac{nom} < \ac{acc} < \ac{dat}\label{ex:case-scale}
 
 In the next few sections I show that this case scale does not only appear in headless relatives. The next section shows two other morphosyntactic phenomena that follow the same scale. Section \ref{sec:casemorphology} shows how the case scale is reflected in morphophonology.
 
 
-\section{Two impliciational hierarchies}
+\section{Two implicational hierarchies}
 
-In this section I discuss two additional phenomena in morphosyntax that reflect the \tsc{nom} < \tsc{acc} < \tsc{dat} scale. Both are implicational hierarchies. The first one is about agreement, the second one is about relativization.
+In this section I discuss two additional phenomena in morphosyntax that reflect the \ac{nom} < \ac{acc} < \ac{dat} scale. Both are implicational hierarchies. The first one is about agreement, the second one is about relativization. These phenomena show that the pattern in headless relatives is not something that stands on itself. The scale is a pattern that reoccurs in languages. Therefore, it should not be treated as an exception with its own stipulated rule. Instead, it is something general that should also follow from general processes in languages.
 
 \subsection{Agreement}
 
 Agreement can be seen as ``a systematic covariance between a semantic or formal property of one element and a formal property of another'' \citep{steel1978}. Put differently, the shape of one element changes according to some properties of an element it relates to. In this section I discuss the agreement between a predicate and its arguments.
 
-It differs per language with how many of its arguments a predicate agrees. However, it is not random with which agreement takes place. Instead, there is a implicational hierarchy that is identical to the one observed for headless relatives in Gothic: \tsc{nom} < \tsc{acc} < \tsc{dat}.
+It differs per language with how many of its arguments a predicate agrees. However, it is not random with which agreement takes place. Instead, there is a implicational hierarchy that is identical to the one observed for headless relatives in Gothic: \ac{nom} < \ac{acc} < \ac{dat}.
 
 \citet{moravcsik1978} formulated the implicational hierarchy in terms of grammatical functions subject, direct object and indirect object.\footnote{
 \citet{moravcsik1978} also included adverbs on the lowest end of the hierarchy. I leave them out here, because they are not relevant for the discussion.
@@ -258,7 +258,7 @@ German is an example of a language that shows agreement with the subject of the 
 Hungarian is an example of a language that shows agreement with the subject and the direct object of a clause. An example is given in \ref{ex:hungarianagr}. The predicate \tit{adom} `give' contains the morpheme \tit{-om}. This is a portmonteau morpheme for a first person singular subject and a third person object agreement. The predicate \tit{adom} `give' agrees with the subject \tit{én} `I' and the direct object \tit{a könyvet} `the book'. There is no agreement with the indirect object \tit{neked} `you'.
 
 \exg. (Én) neked ad -om a könyv -et\\
- I you.\tsc{dat}.\tsc{sg} give -\tbf{\tsc{1sg}.\tsc{sbj}>3.\tsc{obj}} the book -\tsc{acc}\\
+ I you.\ac{dat}.\ac{sg} give -\tbf{1\ac{sg}.\ac{subj}>3.\ac{obj}} the book -\ac{acc}\\
  `I give you the book.' \flushfill{Hungarian, András Bárány p.c.}\label{ex:hungarianagr}
 
 Basque is an example of language that shows agreement with the subject, the direct object and the indirect object. Basque is an ergative-absolutive language, so in transitive clauses subjects are marked as ergative and objects are marked as absolutive. An example from the Bizkaian dialect is given in \ref{ex:basqueagr}. The stem of the auxiliary \tit{aus} combines with the morphemes \tit{d-}, \tit{-ta} and \tit{-zu}. The morpheme \tit{d-} is the agreement morpheme for third person singular as direct objects, which is here \tit{liburua} `the book'. The morpheme \tit{-ta} is the agreement morpheme for first person singular indirect objects, which is here \tit{niri} `me'. The morpheme \tit{-zu} is the agreement morpheme for second person singular ergative subjects, which is here \tit{zuk} `you'.
@@ -341,9 +341,9 @@ In the languages I discuss in this dissertation, I focus on languages that have 
     \draw [fill opacity=0.4, fill=LG] (0,0.5) circle (1.75);
     \draw [fill opacity=0.4, fill=DG] (0,0) circle (1.25);
 
-    \node[] at (0,2.75) {\tsc{nom}};
-    \node[] at (0,1.75) {\tsc{acc}};
-    \node[] at (0,0) {\tsc{dat}};
+    \node[] at (0,2.75) {\ac{nom}};
+    \node[] at (0,1.75) {\ac{acc}};
+    \node[] at (0,0) {\ac{dat}};
   \end{tikzpicture}
   \label{fig:agr-nom-acc-dat}
   \caption{\posscitealt{bobaljik2006} simplified schema}
@@ -354,16 +354,16 @@ In the languages I discuss in this dissertation, I focus on languages that have 
 Icelandic is a language that has dative subjects. If agreement takes place with the grammatical subject, it is expected that the dative subject agrees with the predicate. This is not what happens, as illustrated in \ref{ex:icelandic-dat-sub}. The dative subject \tit{morgum studentum} `many students' is plural. The sentence is ungrammatical with the predicate \tit{líka} `like' inflecting for plural as well. So, the dative subject does not agree in number with the predicate. In other words, it is not the grammatical subject that shows agreement.
 
 \exg. *Morgum studentum líka verkið.\\
- many students.\tsc{dat} like.\tsc{pl} job.\tsc{nom} \\
+ many students.\ac{dat} like.\ac{pl} job.\ac{nom} \\
 `Many students like the job.' \flushfill{\pgcitealt{harley1995}{208}}\label{ex:icelandic-dat-sub}
 
 Instead, it is the nominative object that agrees with the verb. This is illustrated in \ref{ex:icelandic-nom-obj}. The dative subject \tit{konunginum} `the king' is singular. The nominative object \tit{ambáttir} `slaves' is plural. The predicate \tit{voru} `were' is inflected for plural, agreeing with the nominative object. This is expected if morphological case determines agreement: it is the nominative that shows agreement. The grammatical role, the fact that this nominative is an object, does not influence agreement.
 
 \exg. Um veturinn voru konunginum gefnar ambáttir\\
-In the.winter were.PL the.king.\tsc{dat} given slaves.\tsc{nom}\\
+In the.winter were.PL the.king.\ac{dat} given slaves.\ac{nom}\\
 `In the winter, the king was given (female) slaves.' \flushfill{\pgcitealt{zaenen1985}{112}}\label{ex:icelandic-nom-obj}
 
-In conclusion, agreement follows the same implicational hierarchy as the case scale in headless relatives: \tsc{nom} < \tsc{acc} < \tsc{dat}.
+In conclusion, agreement follows the same implicational hierarchy as the case scale in headless relatives: \ac{nom} < \ac{acc} < \ac{dat}.
 
 
 \subsection{Relativization}
@@ -374,7 +374,7 @@ Relativization refers to the process in which a relative clause is derived from 
 \a. You like the woman. \label{ex:rel-non}
 \b. the woman, (who) you like \label{ex:rel-realati}
 
-In \ref{ex:rel-realati}, it is the object of the clause that is relativized. It differ per language which elements can be relativized with a particular strategy. Again, it is not random with which elements can be relativized. Instead, there is a implicational hierarchy that is identical to the one observed for the case scale: \tsc{nom} < \tsc{acc} < \tsc{dat}.
+In \ref{ex:rel-realati}, it is the object of the clause that is relativized. It differ per language which elements can be relativized with a particular strategy. Again, it is not random with which elements can be relativized. Instead, there is a implicational hierarchy that is identical to the one observed for the case scale: \ac{nom} < \ac{acc} < \ac{dat}.
 
 \citet{keenan1977} formulated the implicational hierarchy in terms of the grammatical functions subject, direct object and indirect object.\footnote{
 \citet{keenan1977} also included obliques, possessives and objects of comparison on the lowest end of the hierarchy. I leave them out here, because they are not relevant for the discussion.
@@ -451,12 +451,12 @@ A relative clause in Basque appears in the prenominal position and it is marked 
 additionally, the relativized positions do not appear in verbal agreement anymore, but this not visible in the example, because they are all phonologically zero.
 }
 \ref{ex:basque-sub} shows the four relativizations that are derived from \ref{ex:basque-decl}.
-In \ref{ex:basque-sub}, the ergative subject \tit{gizonak} `the man' from \ref{ex:basque-decl} is relativized. The head \tit{gizona} `the man' has lost its ergative marker \tsc{-k}, and follows the relative clause \tit{makumeari liburua eman dio} `who has given the book to the woman'. The suffix \tit{-n} is attached to the relative clause.
+In \ref{ex:basque-sub}, the ergative subject \tit{gizonak} `the man' from \ref{ex:basque-decl} is relativized. The head \tit{gizona} `the man' has lost its ergative marker \tit{-k}, and follows the relative clause \tit{makumeari liburua eman dio} `who has given the book to the woman'. The suffix \tit{-n} is attached to the relative clause.
 In \ref{ex:basque-do}, the absolutive direct object \tit{liburua} `the book' from \ref{ex:basque-decl} is relativized. The head \tit{liburua} `the book' follows the relative clause \tit{gizonak emakumeari eman dion} `that the man has given to the woman'.\footnote{
 The absolutive direct object \tit{liburua} `the book' does not have an additional overt absolutive marker, so this difference cannot be observed when it is relativized.
 }
 The suffix \tit{-n} is attached to the relative clause.
-In \ref{ex:basque-io}, the dative indirect object \tit{emakumeari} `the woman' from \ref{ex:basque-decl} is relativized. The head \tit{emakumea} `the man' has lost its dative marker \tsc{-ri}, and follows the relative clause \tit{gizonak liburua eman dion} `that the man has given the book to'. The suffix \tit{-n} is attached to the relative clause.
+In \ref{ex:basque-io}, the dative indirect object \tit{emakumeari} `the woman' from \ref{ex:basque-decl} is relativized. The head \tit{emakumea} `the man' has lost its dative marker \tit{-ri}, and follows the relative clause \tit{gizonak liburua eman dion} `that the man has given the book to'. The suffix \tit{-n} is attached to the relative clause.
 
 \ex.\label{ex:basque-rel}
 \ag. emakume-a-ri liburu-a eman dio-n gizon-a\\
@@ -469,41 +469,7 @@ In \ref{ex:basque-io}, the dative indirect object \tit{emakumeari} `the woman' f
  man-\ac{def}-\ac{erg} book-\ac{def}.\ac{abs} give has-\ac{rel} woman-\ac{def}\\
  `the woman that the man has given the book to' \flushfill{Basque, \pgcitealt{keenan1977}{72}}\label{ex:basque-io}
 
-\citealt{caha2009} restates the implicational hierarchy in terms of case. Again, the case scale can be observed: \tsc{nom} < \tsc{acc} < \tsc{dat}.
-
-
- %
- % \begin{table}[H]
- %   \center
- %   \caption {Relativization accessibility}
- %     \begin{tabular}{cccc}
- %       \toprule
- %             \multicolumn{3}{c}{relativization of}
- %           & \\
- %       \cmidrule{1-3}
- %             & direct
- %             & indirect
- %           & \\
- %             subject
- %             & object
- %             & object
- %           & example \\
- %       \cmidrule{1-3} \cmidrule{4-4}
- %             ✔
- %             & *
- %             & *
- %           & Malagasy \\
- %             ✔
- %             & ✔
- %             & *
- %           & Malay \\
- %             ✔
- %             & ✔
- %             & ✔
- %           & Basque \\
- %       \bottomrule
- %     \end{tabular}
- % \end{table}
+\citealt{caha2009} restates the implicational hierarchy in terms of case. Again, the case scale can be observed: \ac{nom} < \ac{acc} < \ac{dat}.
 
 
 
