beetje syncretism, beetje pete en pavel's comments
langzaam verder :)

--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -177,7 +177,7 @@
 
 @incollection{moravcsik2009,
   title={The distribution of case},
-  author={Moravcsik, Edith A},
+  author={Moravcsik, Edith A.},
   booktitle={The Oxford handbook of case},
   editor={Andrej Malchukov and Andrew Spencer},
   pages={231–245},
@@ -256,7 +256,7 @@
   pages = {331-374}
 }
 
-@misc{steel1978,
+@incollection{steel1978,
   title={Word order variation: A typological study},
   author={Steel, Susan},
   year={1978},
@@ -307,4 +307,52 @@
   school = {University of Tromsø},
   author = {Caha, Pavel},
   year = {2009}
+}
+
+@article{baerman2002,
+  title={Surrey syncretisms database},
+  author={Baerman, Matthew and Brown, Dunstan and Corbett, Greville G},
+  year={2002},
+  institute = {University of Surrey},
+  address = {Surrey},
+  doi = {10.15126/SMG.10/1}
+}
+
+@book{baerman2005,
+  title={The syntax-morphology interface: A study of syncretism},
+  author={Baerman, Matthew and Brown, Dunstan and Corbett, Greville G},
+  year={2005},
+  publisher={Cambridge University Press},
+  address = {Cambridge}
+}
+
+@mathesis{zompi2017,
+  title={Case decomposition meets dependent-case theories},
+  author={Zompì, Stanislao},
+  institute = {Universita de Pisa},
+  school={Pisa},
+  year={2017}
+}
+
+@article{mcfadden2018,
+  title={*ABA in stem-allomorphy and the emptiness of the nominative},
+  author={McFadden, Thomas},
+  journal={Glossa: a journal of general linguistics},
+  volume={3},
+  number={1},
+  year={2018},
+  publisher={Ubiquity Press},
+  doi={10.5334/gjgl.373}
+}
+
+@article{smith2019case,
+  title={Case and number suppletion in pronouns},
+  author={Smith, Peter W and Moskal, Beata and Xu, Ting and Kang, Jungmin and Bobaljik, Jonathan David},
+  journal={Natural Language \& Linguistic Theory},
+  volume={37},
+  number={3},
+  pages={1029--1101},
+  year={2019},
+  publisher={Springer},
+  doi={10.1007/s11049-018-9425-0}
 }
