--- a/introduction.tex
+++ b/introduction.tex
@@ -17,88 +17,87 @@ In this introduction I first introduce what I mean exactly with case competition
 % First, case marks the grammatical role of the noun phrases. Case also appears on relative pronoun. Case on head can differ from case on relative pronoun. What happens if there is no noun? Two cases come together on the relative pronoun. What holds for all languages: there is a fixed order of who wins the competition. Specific from language to language: when does the competition take place?
 
 
-Languages can use case to mark the grammatical role of a noun phrase in a clause \citep{moravcsik2009}. Consider the two Modern German sentences in \ref{ex:germancase}. Subjects of the predicate \tit{mag} `likes' are marked as nominative, and objects of \tit{mag} `likes' are marked as accusative. The case marking of the noun phrases is reflected on the determiner in the noun phrase.
-In \ref{ex:germancase1}, \tit{der} in \tit{der Lehrer} `the teacher' appears in nominative case, because it is the subject in the clause. \tit{Den} in \tit{den Schüler} `the pupil' appears in accusative case, because it is an object of \tit{mag} `likes'.
-In \ref{ex:germancase2}, the grammatical roles are reversed: \tit{der} in \tit{der Schüler} `the pupil' appears in nominative case, because it is the subject in the clause. \tit{Den} in \tit{den Lehrer} `the teacher' appears in accusative case, because it is the object of \tit{mag} `likes'.
-The grammatical roles of the noun phrases in \ref{ex:germancase} can also be derived from the positioning in the clause. The subjects precede the predicate \tit{mag} `likes' and the objects follow it. As it is not relevant for the discussion here, I do not discuss the positioning of noun phrases in the clause into further detail.
+Languages can use case to mark the grammatical role of a noun phrase in a clause \citep[cf.][]{moravcsik2009}. Consider the two Modern German sentences in \ref{ex:german-case}. Subjects of the predicate \tit{mag} `likes' are marked as nominative, and objects of \tit{mag} `likes' are marked as accusative. The case marking of the noun phrases is reflected on the determiner in the noun phrase.
+In \ref{ex:german-case-1}, \tit{der} in \tit{der Lehrer} `the teacher' appears in nominative case, because it is the subject in the clause. \tit{Den} in \tit{den Schüler} `the pupil' appears in accusative case, because it is an object of \tit{mag} `likes'.
+In \ref{ex:german-case-2}, the grammatical roles are reversed: \tit{der} in \tit{der Schüler} `the pupil' appears in nominative case, because it is the subject in the clause. \tit{Den} in \tit{den Lehrer} `the teacher' appears in accusative case, because it is the object of \tit{mag} `likes'.
 
-\ex.\label{ex:germancase}
+\ex.\label{ex:german-case}
 \ag. Der Lehrer mag den Schüler.\\
  the.\ac{nom} teacher likes the.\ac{acc} student\\
- `The teacher likes the pupil.'\label{ex:germancase1}
+ `The teacher likes the pupil.'\label{ex:german-case-1}
 \bg. Der Schüler mag den Lehrer.\\
  the.\ac{nom} student likes the.\ac{acc}\\
- `the pupil likes the teacher.'\label{ex:germancase2}
+ `the pupil likes the teacher.'\label{ex:german-case-2}
 
-Not only full noun phrases, but also other elements can be marked for case, such relative pronouns. Modern German marks relative pronouns, just like full noun phrases, for the grammatical role they have in the clause. Consider the two sentences in \ref{ex:germanrelatives}. These two sentences both contain of a main clause that is modified by a relative clause.
-In \ref{ex:germanrelative1}, the relative clause \tit{der nach draußen guckt} `that looks outside' modifies \tit{den Schüler} `the pupil'. \tit{Den Schüler} `the pupil` is called the head (noun) or the antecedent of the relative clause. \tit{Den} in \tit{den Schüler} `the pupil` appears in accusative case, because it is the object of \tit{mag} `likes' in the main clause. The relative pronoun \tit{der} `that.\ac{nom}' appears in nominative case, because it is the subject of in the relative clause.
+Not only full noun phrases, but also other elements can be marked for case, such relative pronouns. Modern German marks relative pronouns, just like full noun phrases, for the grammatical role they have in the clause. Consider the two sentences in \ref{ex:german-relatives}. These two sentences both contain of a main clause that is modified by a relative clause.
+In \ref{ex:german-relative-1}, the relative clause \tit{der nach draußen guckt} `that looks outside' modifies \tit{den Schüler} `the pupil'. \tit{Den Schüler} `the pupil` is called the head (noun) or the antecedent of the relative clause. \tit{Den} in \tit{den Schüler} `the pupil` appears in accusative case, because it is the object of \tit{mag} `likes' in the main clause. The relative pronoun \tit{der} `that.\ac{nom}' appears in nominative case, because it is the subject of in the relative clause.
 
-In \ref{ex:germanrelative2}, the relative clause \tit{den er beim Verstecktspiel sucht} `that he is searching for playing hide-and-seek' modifies \tit{den Schüler} `the pupil'. \tit{Den} in \tit{den Schüler} `the pupil` appears again in accusative, because it is the object of \tit{mag} `likes' in the main clause. The relative pronoun \tit{den} `that.\ac{acc}' appears in accusative case, because it is the object of \tit{sucht} `searches' in the relative clause.
+In \ref{ex:german-relative-2}, the relative clause \tit{den er beim Verstecktspiel sucht} `that he is searching for playing hide-and-seek' modifies \tit{den Schüler} `the pupil'. \tit{Den} in \tit{den Schüler} `the pupil` appears again in accusative, because it is the object of \tit{mag} `likes' in the main clause. The relative pronoun \tit{den} `that.\ac{acc}' appears in accusative case, because it is the object of \tit{sucht} `searches' in the relative clause.
 
-\ex.\label{ex:germanrelatives}
+\ex.\label{ex:german-relatives}
 \ag. Der Lehrer mag den Schüler, der nach draußen guckt.\\
  the.\ac{nom} teacher likes the.\ac{acc} student that.\ac{nom} to outside looks\\
- `The teacher likes the pupil that is looking outside.'\label{ex:germanrelative1}
+ `The teacher likes the pupil that is looking outside.'\label{ex:german-relative-1}
  \bg. Der Lehrer mag den Schüler, den er beim Verstecktspiel sucht.\\
- the.\ac{nom} teacher likes the.\ac{acc} student that.\ac{acc} he at the {hide-and-seek game} searches\\
- `The teacher likes the pupil that he is searching for playing hide-and-seek.'\label{ex:germanrelative2}
+ the.\ac{nom} teacher likes the.\ac{acc} student that.\ac{acc} he {at the} {hide-and-seek game} searches\\
+ `The teacher likes the pupil that he is searching for playing hide-and-seek.'\label{ex:german-relative-2}
 
-Compare the two sentences in \ref{ex:germanrelatives}. In both sentences the head is marked as accusative because it is the object in the main clause. The case of the relative pronoun in \ref{ex:germanrelative2} is also accusative, because of it is the object in the relative clause. The case of the relative pronoun in \ref{ex:germanrelative1} is nominative, because it is the subject in the relative clause. So, the case of the relative pronoun in \ref{ex:germanrelative1} differs from the case of the head.
+Compare the two sentences in \ref{ex:german-relatives}. In both sentences the head is marked as accusative because it is the object in the main clause. The case of the relative pronoun in \ref{ex:german-relative-2} is also accusative, because of it is the object in the relative clause. The case of the relative pronoun in \ref{ex:german-relative-1} is nominative, because it is the subject in the relative clause. So, the case of the relative pronoun in \ref{ex:german-relative-1} differs from the case of the head.
 
 The focus of this dissertation lies on headless relatives. As the name suggests, this type of relative clause lacks a head.\footnote{
 This `missing noun' has been interpreted in two different ways. Some researchers argue that the noun is truly missing, it is absent, cf. \citealt{citko2005,vanriemsdijk2006}. Others claim that there is actually a head, but it is phonologically zero, \citealt{bresnan1978,groos1981,grosu2003}. At this point in the discussion this distinction is not relevant. I return to the issue in Chapter \ref{ch:connecting}.
 }
-I give an example of a headless relative in Gothic in \ref{ex:gothicaccacc}. The relative clause is \tit{þan -ei arma} `who I pity', marked in gray. There is no head that this relative clause modifies, because it is a headless relative. This is different from the examples from German I gave above, which each had a head.
+I give an example of a headless relative in Gothic in \ref{ex:gothic-acc-acc}. The relative clause is \tit{þan -ei arma} `who I pity', marked in bold. There is no head that this relative clause modifies, because it is a headless relative. This is different from the examples from German I gave above, which each had a head.
 The predicate \tit{arma} `pity' takes accusative objects, as indicated by the subscript on the gloss of the verb. The predicate \tit{gaarma} `pity' also takes accusative objects, indicated again by the subscript.
 The relative pronoun \tit{þan(a)} `who.\ac{acc}' appears in accusative case.\footnote{
 The relative pronoun without the complementizer \tit{-ei} is \tit{þana}. Therefore, I refer to the relative pronoun as \tit{þan(a)}.
 }
 
-\exg. gaarma þan \tcol{DG}{-ei} \tcol{DG}{arma}\\
+\exg. gaarma þan \tbf{-ei} \tbf{arma}\\
  pity\scsub{[acc]} who.\ac{acc} -\ac{comp} pity\scsub{[acc]}\\
- `I will pity (him) whom I pity' \flushfill{Gothic, \ac{rom} 9:15, after \pgcitealt{harbert1978}{339}}\label{ex:gothicaccacc}
+ `I will pity (him) whom I pity' \flushfill{Gothic, \ac{rom} 9:15, adapted from \pgcitealt{harbert1978}{339}}\label{ex:gothic-acc-acc}
 
 Where does this accusative case come from? Logically speaking, there are two possible sources: the predicate in the main clause \tit{gaarma} `pity', the predicate in the relative clause \tit{arma} `pity' or both predicates. From now on, I use the terms internal and external case to refer to these two possible case sources.
 
-Internal case refers to the case associated with the relative pronoun internal to the relative clause. More precisely, it is the case, which is associated with the grammatical role that the relative pronoun has internal to the relative clause. In \ref{ex:gothicaccacc}, the relative pronoun is the object of \tit{arma} `pity'. The predicate \tit{arma} `pity' takes accusative objects. So, the internal case is accusative.
+Internal case refers to the case associated with the relative pronoun internal to the relative clause. More precisely, it is the case, which is associated with the grammatical role that the relative pronoun has internal to the relative clause. In \ref{ex:gothic-acc-acc}, the relative pronoun is the object of \tit{arma} `pity'. The predicate \tit{arma} `pity' takes accusative objects. So, the internal case is accusative.
 
-External case refers to the case associated with the missing head in the main clause, which is external to the relative clause. Concretely, it is the case which is associated with the grammatical role that the missing head has external to the relative clause. In \ref{ex:gothicaccacc}, the missing head is the object of \tit{gaarma} `pity'. The predicate \tit{gaarma} `pity' takes accusative objects. In \ref{ex:gothicaccacc}, the external case is accusative.
+External case refers to the case associated with the missing head in the main clause, which is external to the relative clause. Concretely, it is the case which is associated with the grammatical role that the missing head has external to the relative clause. In \ref{ex:gothic-acc-acc}, the missing head is the object of \tit{gaarma} `pity'. The predicate \tit{gaarma} `pity' takes accusative objects. In \ref{ex:gothic-acc-acc}, the external case is accusative.
 
-Now I return to the question where \tit{þan(a)} in \ref{ex:gothicaccacc} got its case from. In the remainder of this section I show evidence for the claim that the relative pronoun is sensitive to both the internal and the external case.
+Now I return to the question where \tit{þan(a)} in \ref{ex:gothic-acc-acc} got its case from. In the remainder of this section I show evidence for the claim that the relative pronoun is sensitive to both the internal and the external case.
 This is easy to imagine for the internal case: the internal case reflects the grammatical role of the relative clause. It is a bit more complicated for the external case. The external case is associated with the grammatical role of the missing head in the main clause. The idea is going to be that the external case cannot be reflected a non-existing head. Indirectly, it appears on the relative pronoun.\footnote{
 Later on I will argue that this indirect process is ellipsis.
 }
-This means that the internal and external case come together on the relative pronoun. In other words, there is case competition going on in headless relatives. \ref{ex:gothicaccacc} is indeed the first example I gave of case competition in a headless relative. It is an uninteresting one, because the two competing cases are identical.
+This means that the internal and external case come together on the relative pronoun. In other words, there is case competition going on in headless relatives. \ref{ex:gothic-acc-acc} is indeed the first example I gave of case competition in a headless relative. It is an uninteresting one, because the two competing cases are identical.
 
-Consider the example in \ref{ex:gothicaccdat}, in which the internal case is dative and the external case is accusative. The relative clause \tit{ana þammei lag} `on which he lay' is marked in gray.
+Consider the example in \ref{ex:gothic-acc-dat}, in which the internal case is dative and the external case is accusative. The relative clause \tit{ana þammei lag} `on which he lay' is marked in bold.
 The internal case is dative. The preposition \tit{ana} `on' takes dative objects, as indicated by the subscript on the preposition.
 The external case is accusative. The predicate \tit{ushafjands} `picking up' takes accusative objects, indicated by the subscript on the predicate.
 The relative pronoun \tit{þamm(a)} appears in dative. This dative can only come from the preposition \tit{ana} `on'. The dative is the internal case here.
 
-\exg. ushafjands \tcol{DG}{ana} \tcol{DG}{þamm} \tcol{DG}{-ei} \tcol{DG}{lag}\\
+\exg. ushafjands \tbf{ana} \tbf{þamm} \tbf{-ei} \tbf{lag}\\
  {picking up}\scsub{[acc]} on\scsub{[dat]} what.\ac{dat} -\ac{comp} lay\\
- `picking up (that) on which he lay' \flushfill{Gothic, \ac{luke} 5:25, after \pgcitealt{harbert1978}{343}}\label{ex:gothicaccdat}
+ `picking up (that) on which he lay' \flushfill{Gothic, \ac{luke} 5:25, adapted from \pgcitealt{harbert1978}{343}}\label{ex:gothic-acc-dat}
 
 The conclusion that follows is that the relative pronoun can take the internal case. At this point it remains unclear what happened to the external accusative case.
 
-Now consider the example in \ref{ex:gothicdatacc}, in which the internal case is accusative and the external case is dative. The relative clause \tit{þammei qiþiþ þiudan Iudaie} `whom you call King of the Jews' is marked in gray.
+Now consider the example in \ref{ex:gothic-dat-acc}, in which the internal case is accusative and the external case is dative. The relative clause \tit{þammei qiþiþ þiudan Iudaie} `whom you call King of the Jews' is marked in bold.
 The internal case is accusative. The predicate \tit{qiþiþ} `say' takes accusative objects, as indicated by the subscript on the predicate.
 The external case is dative. The predicate \tit{taujau} `do' takes dative indirect objects, as indicated by the subscript on the predicate.
 The relative pronoun \tit{þamm(a)} appears in the dative case. This dative can only come from the predicate \tit{taujau} `do'. The dative is the external case here.
 
-\exg. hva nu wileiþ ei taujau þamm \tcol{DG}{-ei} \tcol{DG}{qiþiþ} \tcol{DG}{þiudan} \tcol{DG}{Iudaie}?\\
+\exg. hva nu wileiþ ei taujau þamm \tbf{-ei} \tbf{qiþiþ} \tbf{þiudan} \tbf{Iudaie}?\\
  what now want that do\scsub{[dat]} who.\ac{dat} -\ac{comp} say\scsub{[acc]} king {of Jews}\\
- `what now do you wish that I do to (him) whom you call King of the Jews?' \flushfill{Gothic, \ac{mark} 15:12, after \pgcitealt{harbert1978}{339}}\label{ex:gothicdatacc}
+ `what now do you wish that I do to (him) whom you call King of the Jews?' \flushfill{Gothic, \ac{mark} 15:12, adapted from \pgcitealt{harbert1978}{339}}\label{ex:gothic-dat-acc}
 
 The conclusion that follows is that the relative pronoun can take the external case. At this point it remains unclear what happened to the internal accusative case.
 
-The examples in \ref{ex:gothicaccdat} and \ref{ex:gothicdatacc} have shown that the relative pronoun in headless relatives can take either the internal or the external case. In the examples, the predicates (or preposition) take accusative and dative, and in both cases, the relative pronoun appeared in dative case. In other words, there was a competition between accusative and dative, and dative won.
+The examples in \ref{ex:gothic-acc-dat} and \ref{ex:gothic-dat-acc} have shown that the relative pronoun in headless relatives can take either the internal or the external case. In the examples, the predicates (or preposition) take accusative and dative, and in both cases, the relative pronoun appeared in dative case. In other words, there was a competition between accusative and dative, and dative won.
 
 In the next section, I discuss the content of this dissertation. Before that, I comment on two notational conventions I use throughout this dissertation. First, I place subscripts on the glosses of the predicates. They indicate what the internal or external case is. The subscript on the predicate in the relative clause indicates the internal case. The subscript on the predicate in the main clause indicates the external case. This subscript can mean different things.
-For \tit{ushafjands} `picking up' \ref{ex:gothicaccacc} the subscript indicates which case the complement of the verb appears in. The subscript on \tit{taujau} `do' \ref{ex:gothicdatacc} in refers to the case of the indirect object of the predicate. Another possibility is that the subscript is placed on a preposition and refers to the case the preposition combines with, as for \tit{ana} `on' in \ref{ex:gothicaccdat}. A last possibility is that the subscript is [\ac{nom}] and refers to the case in which the subject appears in, of which examples will emerge in the next chapter.
+For \tit{ushafjands} `picking up' \ref{ex:gothic-acc-acc} the subscript indicates which case the complement of the verb appears in. The subscript on \tit{taujau} `do' \ref{ex:gothic-dat-acc} in refers to the case of the indirect object of the predicate. Another possibility is that the subscript is placed on a preposition and refers to the case the preposition combines with, as for \tit{ana} `on' in \ref{ex:gothic-acc-dat}. A last possibility is that the subscript is [\ac{nom}] and refers to the case in which the descriptively called subject appears in, of which examples will emerge in the next chapter.
 In other words, the subscript can refer several elements: a subject, object or indirect object of a predicate. There is no overarching theoretical notion that the subscript makes reference to. The subscript simply indicates which case is required within the (main or relative) clause.
 
-Second, I write the relative clause in gray. When the relative pronoun takes the internal case, I mark it in gray as well, as shown in \ref{ex:gothicaccdat}. When the relative pronoun takes the external case, I leave it black, indicating it patterns with the main clause. An example of that is \ref{ex:gothicdatacc}. When the internal and external case are the same, the relative pronoun should be black and gray. As this is impossible, I choose to mark it black, as shown in \ref{ex:gothicaccacc}.
+Second, I write the relative clause in gray. When the relative pronoun takes the internal case, I mark it in gray as well, as shown in \ref{ex:gothic-acc-dat}. When the relative pronoun takes the external case, I leave it black, indicating it patterns with the main clause. An example of that is \ref{ex:gothic-dat-acc}. When the internal and external case are the same, the relative pronoun should be black and gray. As this is impossible, I choose to mark it black, as shown in \ref{ex:gothic-acc-acc}.
 
 
 \section{The content of this dissertation}
