--- a/variation.tex
+++ b/variation.tex
@@ -43,6 +43,8 @@ In Italian, case mismatch is not allowed.
  I educate\scsub{[acc]} about Juda who.\ac{acc} my mountains {through pull}\scsub{[nom]}\\
  `I educate the one who wanders through my mountains about Judas' \flushfill{\ac{ohg}, \ac{isid} 34:3, \pgcitealt{behaghel1923}{761}}
 
+
+
 \ex. \ac{int}:\ac{nom}, \ac{ext}:\ac{dat}
 \a. \ac{nom} not attested
 \bg. aer antuurta [demo zaimo sprah]\\
@@ -352,3 +354,84 @@ Pattern in light-headed relatives: \tsc{d}, \tsc{d}
 \end{table}
 
 And how can we now derive this?
+
+\subsection{All allow for matching ones}
+
+First, I discuss the matching headless relatives, in which the internal and external case match.
+
+Consider the example in \ref{ex:gothicaccaccrep}, repeated from the introduction. In this example, the internal case and the external case are accusative.
+The relative clause, including the relative pronoun, is marked in gray.
+The internal case is accusative. The predicate \tit{arma} `pity' takes accusative objects.
+The external case is accusative as well. Here the predicate \tit{gaarma} `pity' takes accusative objects.
+The relative pronoun \tit{þan(a)} `who.\ac{acc}' appears in the accusative.
+
+\exg. gaarma \tcol{DG}{þan} \tcol{DG}{-ei} \tcol{DG}{arma}\\
+ pity\scsub{[acc]} who.\ac{acc} -\ac{comp} pity\scsub{[acc]}\\
+ `I will pity (him) whom I pity' \flushfill{Gothic, \ac{rom} 9:15, after \pgcitealt{harbert1978}{339}}\label{ex:gothicaccaccrep}
+
+Consider the example in \ref{ex:gothicnomnom}, in which the internal case and the external case are nominative.
+The relative clause, including the relative pronoun, is marked in gray.
+The internal case is nominative. The predicate \tit{matjai} `eats' takes nominative subjects.
+The external case is nominative as well. Here the predicate \tit{gadauþnai} `die' takes nominative subjects.
+The relative pronoun \tit{sa} `who.\ac{nom}' appears in the nominative.
+
+\exg. ei \tcol{DG}{sa} \tcol{DG}{-ei} \tcol{DG}{þis} \tcol{DG}{matjai}, ni gadauþnai\\
+ that who.\ac{nom} -\ac{comp} {of this} eats\scsub{[nom]} not die\scsub{[nom]}\\
+ `that (he) who eats of this may not die' \flushfill{Gothic, \ac{john} 6:50, after \pgcitealt{harbert1978}{337}}\label{ex:gothicnomnom}
+
+% or is this one better?
+% \exg. saei sokeib saiwala sema ganasjan, fraqisteib izai\\
+%  who seeks soul his save loses it\\
+%  `Who seeks to save his soul loses it.'\flushfill{Luk 17:33}
+
+Consider the examples in \ref{ex:gothicdatdat}, in which the internal case and the external case are dative.
+The relative clauses, including the relative pronoun, is marked in gray.
+The internal case is dative. The predicates \tit{gabaur} `tribute', \tit{mota} `custom', \tit{agis} `fear' and \tit{sweriþa} `honour' takes dative objects.
+The external case is dative as well. The same predicates as in the relative clause take dative objects.
+The relative pronouns \tit{þamm(a)} `who.\ac{dat}' appear in the dative.
+
+\ex.\label{ex:gothicdatdat}
+\ag. \tcol{DG}{þamm} \tcol{DG}{-ei} \tcol{DG}{gabaur} gabaur\\
+ who.\ac{dat} -\ac{comp} tribute\scsub{[dat]} tribute\scsub{[dat]}\\
+ `tribute to (him) whom tribute is due'
+\bg. \tcol{DG}{þamm} \tcol{DG}{-ei} \tcol{DG}{mota} mota\\
+ \tcol{DG}{who.\ac{dat}} \tcol{DG}{-\ac{comp}} \tcol{DG}{custom\scsub{[dat]}} custom\scsub{[dat]}\\
+ `custom to (him) whom custom is due'
+\bg. \tcol{DG}{þamm} \tcol{DG}{-ei} \tcol{DG}{agis} agis\\
+ \tcol{DG}{who.\ac{dat}} \tcol{DG}{-\ac{comp}} \tcol{DG}{fear\scsub{[dat]}} fear\scsub{[dat]}\\
+ `fear (him) whom fear is due'
+\bg. \tcol{DG}{þamm} \tcol{DG}{-ei} \tcol{DG}{sweriþa} sweriþa\\
+ \tcol{DG}{who.\ac{dat}} \tcol{DG}{-\ac{comp}} \tcol{DG}{honour\scsub{[dat]}} honour\scsub{[dat]}\\
+ `honour (him) whom honour is due' \flushfill{Gothic, \ac{rom} 13:7, after \pgcitealt{harbert1978}{339}}
+
+ So far only the diagonal line is filled. These are the matching examples, the examples in which the internal case matches the external case. The relative pronoun appears in the case which is the internal and external case. The nominative is given in \ref{ex:gothicnomnom}, the accusative in \ref{ex:gothicaccaccrep}, and the dative in \ref{ex:gothicdatdat}.
+
+ \begin{table}[H]
+   \center
+   \caption {Summary of Gothic matching headless relative data}
+     \begin{tabular}{c|c|c|c}
+       \toprule
+         \diagbox[linecolor=white]{\ac{int}}{\ac{ext}}
+             & [\ac{nom}]
+             & [\ac{acc}]
+             & [\ac{dat}]
+             \\ \cmidrule{1-4}
+         [\ac{nom}]
+             & \ac{nom}
+             & \diagbox[linecolor=white]{\phantom{nom}}{\phantom{nom}}
+             & \diagbox[linecolor=white]{\phantom{nom}}{\phantom{nom}}
+             \\ \cmidrule{1-4}
+         [\ac{acc}]
+             & \diagbox[linecolor=white]{\phantom{nom}}{\phantom{nom}}
+             & \ac{acc}
+             & \diagbox[linecolor=white]{\phantom{nom}}{\phantom{nom}}
+             \\ \cmidrule{1-4}
+         [\ac{dat}]
+             & \diagbox[linecolor=white]{\phantom{nom}}{\phantom{nom}}
+             & \diagbox[linecolor=white]{\phantom{nom}}{\phantom{nom}}
+             & \ac{dat}
+             \\
+       \bottomrule
+     \end{tabular}
+     \label{tbl:summarygothicmatch}
+ \end{table}
